--- a/_sass/components/_typography.scss
+++ b/_sass/components/_typography.scss
@@ -8,26 +8,26 @@
     font-family: 'Victor Mono';
     font-style: normal;
     font-weight: 900;
-    src: url('../../assets/fonts/VictorMono-SemiBold.eot'); /* IE9 Compat Modes */
-    src: local('Victor Mono Regular'), local('VictorMono-SemiBold'),
-         url('../../assets/fonts/VictorMono-SemiBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../../assets/fonts/VictorMono-SemiBold.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../../assets/fonts/VictorMono-SemiBold.woff') format('woff'), /* Modern Browsers */
-         url('../../assets/fonts/VictorMono-SemiBold.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../../assets/fonts/VictorMono-SemiBold.svg#VictorMono-SemiBold') format('svg'); /* Legacy iOS */
+    src: url('../../fonts/VictorMono-Regular.eot'); /* IE9 Compat Modes */
+    src: local('Victor Mono Regular'), local('VictorMono-Regular'),
+         url('../../fonts/VictorMono-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../../fonts/VictorMono-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../../fonts/VictorMono-Regular.woff') format('woff'), /* Modern Browsers */
+         url('../../fonts/VictorMono-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../../fonts/VictorMono-Regular.svg#VictorMono-Regular') format('svg'); /* Legacy iOS */
 }
 /* ====  IBM Plex Sans Condensed ==== */
-/* ===  IBM Plex Sans Condensed - ExtraLight === */
+/* ===  IBM Plex Sans Condensed - Regular === */
 @font-face {
     font-family: 'IBM Plex Sans Condensed';
     font-style: normal;
     font-weight: 400;
-    src: url('../../assets/fonts/IBMPlexSansCondensed-ExtraLight.eot');                                    /* IE9 Compat Modes */
-    src: local('IBM Plex Sans Condensed'), local('IBMPlexSansCondensed-ExtraLight'),
-         url('../../assets/fonts/IBMPlexSansCondensed-ExtraLight.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../../assets/fonts/IBMPlexSansCondensed-ExtraLight.woff2') format('woff2'),                  /* Super Modern Browsers */
-         url('../../assets/fonts/IBMPlexSansCondensed-ExtraLight.woff') format('woff'),                    /* Modern Browsers */
-         url('../../assets/fonts/IBMPlexSansCondensed-ExtraLight.ttf') format('truetype'),                 /* Safari, Android, iOS */
+    src: url('../../fonts/IBMPlexSansCondensed-Regular.eot');                                    /* IE9 Compat Modes */
+    src: local('IBM Plex Sans Condensed'), local('IBMPlexSansCondensed-Regular'),
+         url('../../fonts/IBMPlexSansCondensed-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../../fonts/IBMPlexSansCondensed-Regular.woff2') format('woff2'),                  /* Super Modern Browsers */
+         url('../../fonts/IBMPlexSansCondensed-Regular.woff') format('woff'),                    /* Modern Browsers */
+         url('../../fonts/IBMPlexSansCondensed-Regular.ttf') format('truetype'),                 /* Safari, Android, iOS */
 }
 
 //
@@ -42,6 +42,9 @@ html {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-size: $font-size-base;
+  webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: antialiased;
 }
 
 //
